<resources>
    <string name="app_name">雷锋骑士</string>
    <string name="msg_user_not_empty">用户名不能为空</string>
    <string name="msg_pwd_not_empty">密码不能为空</string>
    <string name="msg_http_error">雷锋貌似生病了...</string>

    <string name="msg_input_phone_number">输入手机号</string>
    <string name="msg_check">验证</string>
    <string name="msg_confirm_2">确定</string>
    <string name="msg_save">保存</string>
    <string name="msg_withdraw_balance">提现</string>
    <string name="msg_safe_check">安全验证</string>
    <string name="msg_reset_pwd">重置密码</string>
    <string name="msg_phone_number">手机号码</string>
    <string name="msg_input_origin_pwd">请输入原来的密码</string>

    <string name="msg_input_safe_code">请输入你收到的验证码</string>
    <string name="msg_input_new_pwd">请输入新的提现密码</string>
    <string name="msg_confirm_new_pwd">请确定新的提现密码</string>
    <string name="msg_send_safe_code">发送验证码</string>
    <string name="msg_current_account_name">当前帐号</string>
    <string name="msg_pay_setting">提现设置</string>
    <string name="msg_withdraw_setting">提现设置</string>
    <string name="msg_sign_out">退出登陆</string>
    <string name="msg_dorms">宿舍区：</string>
    <string name="msg_enable_nothing_to_write">没有可不填</string>
    <string name="msg_building">楼栋</string>
    <string name="msg_finish">完成</string>
    <string name="msg_mess_name">食堂名称</string>
    <string name="msg_must_write">必填</string>
    <string name="msg_click_to_edit">点击编辑</string>
    <string name="msg_click_to_add_new_building">请输入楼栋名字</string>

    <string name="msg_un_setting">未设置</string>
    <string name="msg_is_setting">已设置</string>
    <string name="msg_input_mess_phone">食堂名称</string>
    <string name="msg_btn_end_time">开始时间</string>
    <string name="msg_btn_start_time">结束时间</string>
    <string name="msg_clean_current_mess_time">删除此段营业时间</string>


    <string name="msg_business_state">营业状态</string>
    <string name="msg_under_business">营业中</string>
    <string name="msg_mess_notice">食堂公告</string>
    <string name="msg_service_tel">服务电话</string>
    <string name="msg_service_tel_2">客服电话</string>

    <string name="msg_business_deliver_scope">配送范围</string>
    <string name="msg_business_time">配送时间</string>
    <string name="msg_confirm">确认</string>
    <string name="msg_withdraw_money">可提现金额（元）</string>
    <string name="msg_account_info">账户信息</string>
    <string name="msg_account_bank">银行卡</string>

    <string name="msg_balance_transfer">余额转出</string>
    <string name="msg_balance_withdraw">余额提现</string>

    <string name="msg_title_dorm">送餐楼栋</string>
    <string name="msg_add_dorm">添加楼栋</string>
    <string name="msg_add_mess">添加食堂</string>
    <string name="msg_input_your_phone">输入您的手机号码</string>
    <string name="msg_input_your_card_number">输入您的银行卡号</string>
    <string name="msg_input_your_card_name">输入持卡人姓名</string>
    <string name="msg_login">登录</string>
    <string name="msg_pause_business">停止营业</string>
    <string name="msg_under_business_specific_info">当前餐厅处于设置的营业时间内，正常接收订单。</string>
    <string name="msg_monday_2_friday">周一至周五</string>
    <string name="msg_new_added_business_date">新增配送时间段</string>
    <string name="msg_saturday">周六</string>
    <string name="msg_sunday">周日</string>
    <string name="msg_current_day_users_added">今日新增注册用户</string>
    <string name="msg_new_user_orders">新用户下单</string>
    <string name="msg_current_school_users">本校注册用户</string>
    <string name="msg_second_floor_restaurant">二楼风味餐厅</string>
    <string name="msg_today_useful_order">今日有效订单</string>
    <string name="msg_today_order_percentage">今日配送收入</string>
    <string name="msg_today_order_award">累计收入</string>
    <string name="msg_financial_reconciliation">财务对账</string>
    <string name="msg_dorm_sending_food">送餐寝室</string>
    <string name="msg_mess_info">食堂信息</string>
    <string name="msg_all_building">全部宿舍楼</string>
    <string name="msg_quick_deliver">尽快10:00送达</string>
    <string name="msg_order_time">下单时间</string>

    <string name="msg_count_all">合计</string>
    <string name="msg_back_up">备注：</string>
    <string name="msg_quit_order">退单</string>
    <string name="msg_user_statistic">用户统计</string>
    <string name="msg_choose_mess">选择餐厅</string>
    <string name="msg_bargain_info">结算信息</string>


    <string name="msg_bargain_method">结算方式</string>
    <string name="msg_limited_transfer_cash">最低打款金额</string>
    <string name="msg_withdraw_info">提款信息</string>
    <string name="msg_card_holder">持卡人</string>
    <string name="msg_card_number">卡号</string>
    <string name="msg_bank">银行</string>
    <string name="msg_withdraw_cash">提现到</string>
    <string name="msg_jiao_tong_yin_hang">交通银行</string>
    <string name="msg_card_created_address">开户行所在地</string>

    <string name="distribution_fee">配送费</string>
    <string name="voucher">优惠券</string>
    <string name="total">合计</string>

    <string name="msg_setting">设置</string>
    <string name="msg_modify_password">修改密码</string>
    <string name="msg_set_pay_password">设置提现密码</string>
    <string name="msg_confirm_password_different">确认密码不一致</string>
    <string name="msg_find_pay_password">找回提现密码</string>
    <string name="msg_please_input_reg_code">请输入验证码</string>
    <string name="msg_send_reg_code">发送校验码</string>
    <string name="msg_set_new_password">设置新密码</string>
    <string name="msg_finish_set_new_password">设置密码完成</string>
    <string name="msg_error_set_new_password">设置密码失败</string>
    <string name="msg_modify_pay_pwdd">修改提现密码</string>
    <string name="msg_error_reg_code">验证码错误</string>
    <string name="msg_cancel">取消</string>
    <string name="balance_transfer_out">余额转出</string>
    <string name="bill">配送收入</string>
    <string name="msg_click_to_add">点击添加</string>
    <string name="msg_add_building">添加楼栋</string>
    <string name="msg_close">关闭</string>
    <string name="msg_add">添加</string>
    <string name="msg_add_new_building">添加新楼栋</string>
    <string name="msg_default_yuan">元</string>


    <!-- 九宫格各条目名称 -->
    <string name="title">标题</string>
    <string name="account_balance">账户余额</string>
    <string name="mess_management">食堂管理</string>
    <string name="deliver_schedule">配送时间</string>
    <string name="dorm_management">楼栋管理</string>
    <string name="message_notification">消息通知</string>
    <string name="contact_service">联系客服</string>
    <string name="deliver_manage">配送员管理</string>
    <!-- 九宫格各条目名称 -->


    <!-- 展示的属性值 -->
    <string name="msg_default_app_name">全民雷锋</string>
    <string name="msg_default_withdraw_balance">可提现金额：</string>
    <string name="msg_default_money">0</string>
    <string name="msg_zhe_jiang_zhong_yi_yao">浙江中医药大学</string>
    <string name="msg_default_date">2016年本月</string>
    <string name="msg_default_address">7B幢417</string>

    <string name="msg_default_date_and_time">5-9 03:45</string>

    <string name="msg_default_mess_name">宝德快餐</string>
    <string name="msg_default_account_name">金角大王</string>
    <string name="msg_default_building_number">9号楼</string>
    <string name="msg_default_cash">116.38</string>
    <string name="msg_default_cash_in">+116.38</string>
    <string name="msg_default_service_tel">13067876987</string>
    <string name="msg_default_order">订单号:108980987879789</string>

    <string name="msg_default_business_time">10:00-12:00</string>
    <string name="msg_default_current_day_users_added">67</string>
    <string name="msg_default_new_user_orders">35</string>
    <string name="msg_default_current_school_users">468</string>
    <string name="loading_tip">食堂配送平台</string>
    <string name="msg_multi_order_confirm">批量确认</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- 设置模块 -->
    <string name="store_state_tips_open">当前餐厅处于设置的营业时间内，正常接收订单</string>
    <string name="store_state_tips_close">当前餐厅处于停业中，不能接收订单</string>
    <string name="store_state_tips_2">确认要停止营业吗？\n停止营业后用户将不能够再下单咯！</string>

    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

    <!-- 实名认证 -->
    <string name="certafication_tip">请谨慎填写实名认证信息，信息不符会造成提现失败，认证通过后，该账户关联的用户信息不可更改</string>
    <string name="title_activity_with_draw">WithDrawActivity</string>
</resources>
