<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/root_layout_ll_gray">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/rl_mess_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/com_field_height_44"
            android:layout_marginTop="@dimen/sub_margin_top_12"
            android:background="@color/white"
            android:gravity="center_vertical">


            <TextView
                style="@style/text_16_black_1"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_16"
                android:text="@string/msg_mess_name" />

            <TextView
                android:id="@+id/tv_mess_name"
                style="@style/text_14_black_3"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin_16"
                android:drawablePadding="@dimen/common_padding_8"
                android:drawableRight="@mipmap/icon_jiantou_r"
                android:hint="@string/msg_must_write" />

        </RelativeLayout>

        <View style="@style/driver_h" />

        <RelativeLayout
            android:id="@+id/rl_mess_status"
            android:layout_width="match_parent"
            android:layout_height="@dimen/com_field_height_44"
            android:layout_marginTop="@dimen/sub_margin_top_12"
            android:background="@color/white"
            android:gravity="center_vertical">


            <TextView
                style="@style/text_16_black_1"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_16"
                android:text="@string/msg_business_state" />

            <TextView
                android:id="@+id/tv_mess_status"
                style="@style/text_14_black_3"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin_16"
                android:drawablePadding="@dimen/common_padding_8"
                android:drawableRight="@mipmap/icon_jiantou_r"
                android:text="@string/msg_under_business"
                android:textColor="@color/green" />

        </RelativeLayout>

        <View
            style="@style/driver_h"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_16"
            android:layout_marginRight="@dimen/activity_horizontal_margin_16" />

        <RelativeLayout
            android:id="@+id/rl_mess_bbs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/com_field_height_44"
            android:background="@color/white"
            android:gravity="center_vertical">


            <TextView
                style="@style/text_16_black_1"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_16"
                android:text="@string/msg_mess_notice" />

            <TextView
                android:id="@+id/tv_mess_bbs"
                style="@style/text_14_black_3"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin_16"
                android:drawablePadding="@dimen/common_padding_8"
                android:drawableRight="@mipmap/icon_jiantou_r"
                android:hint="@string/msg_must_write" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_mess_time"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/sub_margin_top_12"
            android:layout_height="@dimen/com_field_height_44"
            android:background="@color/white"
            android:gravity="center_vertical">


            <TextView
                style="@style/text_16_black_1"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_16"
                android:text="@string/msg_business_time" />


            <TextView
                android:id="@+id/tv_mess_opening_time"
                style="@style/text_14_black_3"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin_16"
                android:drawablePadding="@dimen/common_padding_8"
                android:drawableRight="@mipmap/icon_jiantou_r"
                android:hint="@string/msg_un_setting" />



        </RelativeLayout>

        <View style="@style/driver_h" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_add_finished"
        style="@style/btn_green"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height_44"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/btn_vertical_margin_24"
        android:layout_marginLeft="@dimen/btn_horizontal_margin_30"
        android:layout_marginRight="@dimen/btn_horizontal_margin_30"
        android:text="@string/msg_confirm" />
</LinearLayout>