<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/root_layout_ll_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/com_field_height_100"
        android:layout_marginTop="@dimen/sub_margin_top_12"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin_16">

            <TextView
                style="@style/text_14_black_3"
                android:text="@string/msg_current_day_users_added" />

            <TextView
                style="@style/text_14_black_1"
                android:text="@string/msg_default_current_day_users_added"
                android:textSize="@dimen/check_money_size_42" />
        </LinearLayout>

        <View
            style="@style/driver_v"
            android:layout_marginBottom="@dimen/activity_horizontal_margin_16"
            android:layout_marginTop="@dimen/activity_horizontal_margin_16" />

        <LinearLayout
            android:layout_width="@dimen/activity_statis_layout_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin_16">

            <TextView
                style="@style/text_14_black_3"
                android:text="@string/msg_new_user_orders" />

            <TextView
                style="@style/text_14_black_1"
                android:text="@string/msg_default_new_user_orders"
                android:textSize="@dimen/check_money_size_42" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/com_field_height_100"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/activity_statis_layout_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin_16">

            <TextView
                style="@style/text_14_black_3"
                android:text="@string/msg_current_school_users" />

            <TextView
                style="@style/text_14_black_1"
                android:text="@string/msg_default_current_school_users"
                android:textSize="@dimen/check_money_size_42" />
        </LinearLayout>

        <View
            style="@style/driver_v"
            android:layout_marginBottom="@dimen/activity_horizontal_margin_16"
            android:layout_marginTop="@dimen/activity_horizontal_margin_16" />

        <LinearLayout
            android:layout_width="@dimen/activity_statis_layout_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin_16">

            <TextView
                style="@style/text_14_black_3"
                android:text="@string/msg_new_user_orders" />

            <TextView
                style="@style/text_14_black_1"
                android:text="@string/msg_default_new_user_orders"
                android:textSize="@dimen/check_money_size_42" />
        </LinearLayout>

    </LinearLayout>

    <View style="@style/driver_h" />
</LinearLayout>
