<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/find_psd_height_60"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_input_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/msg_input_phone_number"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/common_padding_6"
            android:paddingRight="@dimen/common_padding_6"
            android:contentDescription="@null"
            android:src="@mipmap/icon_jiantou_r" />

        <TextView
            android:id="@+id/tv_code_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/msg_safe_check"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/common_padding_6"
            android:paddingRight="@dimen/common_padding_6"
            android:contentDescription="@null"
            android:src="@mipmap/icon_jiantou_r" />

        <TextView
            android:id="@+id/tv_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/msg_reset_pwd"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_marginTop="@dimen/activity_vertical_margin_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/check_field_height_50"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/common_margin_16"
            android:src="@drawable/mine_icon_mobile_phone" />

        <EditText
            android:layout_toLeftOf="@+id/btn_get_code"
            android:id="@+id/et_phone"
            style="@style/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/com_txt_margin_left_50"
            android:hint="@string/msg_phone_number" />

        <Button
            android:id="@+id/btn_get_code"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/common_margin_8"
            android:layout_marginRight="@dimen/common_margin_8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_margin_8"
            android:layout_marginBottom="@dimen/common_margin_8"
            android:background="@drawable/shape_radius_order_main_color"
            android:text="@string/msg_send_safe_code"
            android:textColor="@color/text_black"
            android:textSize="@dimen/common_size_14sp"/>

    </RelativeLayout>

    <View style="@style/driver_h" />

    <RelativeLayout
        android:id="@+id/rl_code"
        android:layout_marginTop="@dimen/activity_vertical_margin_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/check_field_height_50"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/common_margin_16"
            android:contentDescription="@null"
            android:src="@drawable/mine_icon_verification_code" />

        <EditText
            android:id="@+id/et_code"
            style="@style/et_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/common_margin_8"
            android:layout_marginLeft="@dimen/com_txt_margin_left_50"
            android:hint="@string/msg_input_safe_code" />

    </RelativeLayout>

    <View style="@style/driver_h" />

    <Button
        style="@style/btn_green"
        android:id="@+id/btn_verify_code"
        android:layout_marginTop="@dimen/activity_vertical_margin_16"
        android:layout_height="45dp"
        android:text="@string/msg_check"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_radius_order_main_color"
        android:textColor="@color/text_black"
        android:textSize="15sp"/>

</LinearLayout>
